[gd_scene load_steps=2 format=3 uid="uid://cr3yyi4nwlpsf"]

[ext_resource type="Script" path="res://Scenes/Main/Main.gd" id="1_uqlcf"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqlcf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 159.0
size_flags_vertical = 3
text = "Flat2D"

[node name="Button2" type="Button" parent="VBoxContainer"]
offset_top = 163.0
offset_right = 1152.0
offset_bottom = 322.0
size_flags_vertical = 3
text = "Theater"

[node name="Button3" type="Button" parent="VBoxContainer"]
offset_top = 326.0
offset_right = 1152.0
offset_bottom = 485.0
size_flags_vertical = 3
text = "Panorama"

[node name="Button4" type="Button" parent="VBoxContainer"]
offset_top = 489.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
text = "VR"
